tests/snapshots/dual_index_fuzzy_resolve_discovers_by_title.json.snap
---
source: test
expression: value
---
{
  "count": 1,
  "matches": [
    {
      "path": [
        "Introduction"
      ],
      "doc_id": "test_doc.md",
      "similarity_score": 0.949999988079071,
      "match_type": "TitleSubstring",
      "title": "Introduction"
    }
  ]
}