tests/snapshots/dual_index_fuzzy_resolve_with_path_drift.json.snap
---
source: test
expression: value
---
{
  "resolved_path": [
    "Architecture",
    "System",
    "Leaf Section"
  ],
  "resolved_id": "doc#Leaf Section",
  "match_type": "Exact",
  "similarity": 1.0,
  "doc_id": "test_doc.md",
  "title": "Leaf Section"
}