tests/snapshots/dual_index_resolve_by_id_o1_lookup.json.snap
---
source: test
expression: value
---
{
  "resolved_path": [
    "Introduction"
  ],
  "resolved_id": "intro-id",
  "match_type": "Exact",
  "similarity": 1.0,
  "doc_id": "test_doc.md",
  "title": "Introduction"
}