tests/snapshots/link_graph_hybrid_expected_quantum_fusion_arrow_zero_copy.json.snap
---
source: test
expression: value
---
{
  "reused_columns": {
    "anchor_id": true,
    "vector_score": true
  },
  "schema": {
    "input": [
      "anchor_id",
      "vector_score"
    ],
    "output": [
      "anchor_id",
      "vector_score",
      "quantum_saliency"
    ]
  },
  "saliency_column": "quantum_saliency"
}